# pystream

./: .gitignore  Makefile  README.md  experiments.ipynb  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
docs/source/: about.rst  api-reference.rst  conf.py  examples.rst  getting-started.rst  index.rst  install.rst  pystream.infrastructure.rst  pystream.rst  user-guide.rst
pystream/: Pipe.py  Stream.py  collectors.py  exceptions.py  main.py  nullable.py  parallel_stream.py  sequential_stream.py  stream.py  types.py  utils.py
pystream/abstracts/: abstract_base_stream.py  abstract_collector.py
pystream/backends/: parallel_stream.py
pystream/collectors/: built_in.py  single_thread.py
pystream/core/: pipe.py  utils.py
pystream/helpers/: parallel_stream_helpers.py
pystream/infrastructure/: collectors.py  exceptions.py  nullable.py  pipe.py  utils.py
pystream/interfaces/: CollectorInterface.pyi  base_stream_interface.py  stream_interface.py
pystream/mixins/: StreamCreatorsMixin.py  stream_creators_mixin.py
pystream/strategies/: sequential_stream.py
tests/: speed_benchmark.py  speed_test.py  test_nullable.py  test_parallel.py  test_parallel_stream.py  test_sequential.py  test_sequential_stream.py  test_stream.py  test_transitions.py
